--- a/upload/include/includes/css/download-cate.css
+++ b/upload/include/includes/css/download-cate.css
@@ -24,6 +24,9 @@ section#kategorie > a > header > h1 {
 }
 section#kategorie > a > #content {
     position: relative;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
 }
 section#kategorie > a > #content > img {
     background-color: rgba(255,255,255,0.05);
