--- a/upload/include/templates/downloads.htm
+++ b/upload/include/templates/downloads.htm
@@ -6,8 +6,8 @@
     {EXPLODE}
     <a href="index.php?downloads-{id}">
         <header><h1>{name}</h1></header>
-        <div id="content">
-            <img src="{img}" onerror="include/images/downcats/na.png" />
+        <div id="contentd">
+            <img src="{img}" />
             <div><b>{files}x</b> Downloads<br /><small>{desc}</small></div>
         </div>
     </a>
@@ -20,8 +20,8 @@
     {EXPLODE}
     <a href="index.php?downloads-show-{id}">
         <header><h1>{name} {version}</h1></header>
-        <div id="content">
-            <img src="{img}" onerror="include/images/downcats/na.png" />
+        <div id="contentd">
+            <img src="{img}" />
             <div>{desc}</div>
         </div>
     </a>
