--- a/upload/include/templates/downloads.htm
+++ b/upload/include/templates/downloads.htm
@@ -30,8 +30,8 @@
 </section>
 <br style="clear: both;" />
 {EXPLODE}
-<p></p><p></p>
-<form action="index.php?downloads-upload" method="POST" enctype="multipart/form-data">
+<br style="clear: both;" />
+<form action="index.php?downloads-upload" method="POST" enctype="multipart/form-data" style="display: block; margin: 50px 40px 0 40px">
     <fieldset>
         <legend><b>{_lang_fileup}</b></legend>
         <label style="width:100px; float:left;">{_lang_name}</label><input type="text" name="name" maxlength="50" value="" /><br />
